salesforce/force-app/main/default/objects/Car_Reservation__c/Car_Reservation__c.object-meta.xml
<CustomObject>
    <label>Car Reservation</label>
    <nameField>
        <displayFormat>res#{0}</displayFormat>
        <label>Car Reservation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>