salesforce/force-app/main/default/objects/Car_Reservation__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <label>Car</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Car Reservations</relationshipLabel>
    <relationshipName>Car_Reservations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>