salesforce/force-app/main/default/objects/Car_Reservation__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>number of days reserved multiplied by cost per day</description>
    <formula>Car__r.Per_Day_Rent__c * ( Reservation_End__c - Reservation_Start__c)</formula>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>