salesforce/force-app/main/default/objects/Car_Reservation__c/fields/Reservation_End__c.field-meta.xml
<CustomField>
    <fullName>Reservation_End__c</fullName>
    <label>Reservation End</label>
    <type>Date</type>
</CustomField>