salesforce/force-app/main/default/objects/Car_Reservation__c/fields/Reservation_Start__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Start__c</fullName>
    <label>Reservation Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>